opam-version: "2.0"
name: "snark_params"
maintainer: "opensource@o1labs.org"
authors: "O(1) Labs, LLC <opensource@o1labs.org>"
license: "MIT"
homepage: "https://github.com/MinaProtocol/crypto"
bug-reports: "https://github.com/MinaProtocol/crypto/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "blake2"
  "core"
  "hash_prefix_states"
  "mina_signature_kind"
  "non_zero_curve_point"
  "ppx_version"
  "random_oracle"
  "snark_params"
  "snarky"
  "yojson"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/MinaProtocol/crypto.git"
synopsis: "Mina crypto library"
description: """
crypto library...
"""
