opam-version: "2.0"
name: "snarky_curves"
maintainer: "opensource@o1labs.org"
authors: "O(1) Labs, LLC <opensource@o1labs.org>"
license: "MIT"
homepage: "https://github.com/MinaProtocol/crypto"
bug-reports: "https://github.com/MinaProtocol/crypto/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/MinaProtocol/crypto.git"
synopsis: "Mina crypto library"
description: """
crypto library...
"""
